[package]
name = "falco-enc"
version = "0.1.0"
authors = ["Henning Günther <raptamei.pi@gmail.com>"]

[features]
default = []
cpuprofiling = ["cpuprofiler"]

[dependencies]
smtrs = { git = "https://github.com/hguenther/smtrs" }
llvm-ir = { git = "https://github.com/hguenther/llvm-ir" }
symbolic-llvm = { git = "https://github.com/hguenther/symbolic-llvm" }
clap = "2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
num-bigint = "0.1"
nom = "^3.2"
cpuprofiler = { version = "0.0.3", optional = true }
petgraph="0.4"